# repro-unexpected-macro-dependency

./: .gitignore
clientc/: build-fails.sh  build-ok-2.sh  build-ok.sh  main.c
macro_crate/: Cargo.toml
macro_crate/src/: lib.rs
rlib_crate/: Cargo.toml
rlib_crate/src/: lib.rs
staticlib_crate/: Cargo.toml  build-successfully.sh  build-unsuccessfully.sh
staticlib_crate/src/: lib.rs
